--- a/contact.html
+++ b/contact.html
@@ -2,47 +2,206 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Contacto - Portafolio de Fidel Azurza</title>
+  <title>Contacto - Fidel Azurza</title>
   <link rel="stylesheet" href="static/css/style.css">
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #007bff, #00c6ff);
-      margin: 0; padding: 0;
+      font-family: 'Poppins', sans-serif;
+      margin: 0;
+      background: linear-gradient(135deg, #ff7f50, #007bff, #32cd32); /* naranja + azul + verde */
+      color: #333;
     }
+    header {
+      background: rgba(0,0,0,0.7);
+      padding: 40px;
+      text-align: center;
+      color: #fff;
+      box-shadow: 0 2px 15px rgba(0,0,0,0.4);
+    }
+    header h1 {
+      margin: 0;
+      font-size: 36px;
+      font-weight: 700;
+      letter-spacing: 2px;
+    }
+    nav {
+      margin-top: 20px;
+    }
+    nav a {
+      display: inline-block;
+      margin: 0 12px;
+      padding: 10px 18px;
+      background: #ff7f50;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 8px;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+    nav a:hover {
+      background: #32cd32;
+      transform: scale(1.1);
+    }
+
     .container {
-      max-width: 700px; margin: 50px auto; background: #fff; padding: 40px;
-      border-radius: 15px; box-shadow: 0 0 25px rgba(0,0,0,0.3);
-      text-align: center; animation: fadeIn 1s ease-in-out;
+      max-width: 1100px;
+      margin: 50px auto;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 25px;
+      padding: 0 20px;
     }
-    h1 { color: #007bff; font-size: 32px; margin-bottom: 20px; }
-    .contact-info { font-size: 18px; color: #333; line-height: 1.8; margin-bottom: 25px; }
-    .contact-info strong { color: #007bff; }
-    .social-links { margin-top: 20px; }
-    .social-links a {
-      display: inline-block; margin: 0 10px; padding: 10px 15px;
-      border-radius: 8px; background: #007bff; color: #fff;
-      text-decoration: none; font-weight: bold; transition: 0.3s;
+    .card {
+      background: linear-gradient(135deg, #ffffff, #e0f7fa);
+      border-radius: 15px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.25);
+      padding: 25px;
+      text-align: center;
+      transition: transform 0.3s;
     }
-    .social-links a:hover { background: #0056b3; transform: scale(1.1); }
-    @keyframes fadeIn { from {opacity: 0; transform: translateY(20px);} to {opacity: 1; transform: translateY(0);} }
+    .card:hover {
+      transform: translateY(-10px);
+    }
+    .card h3 {
+      color: #007bff;
+      margin-bottom: 10px;
+      font-size: 20px;
+    }
+    .card p {
+      font-size: 16px;
+      color: #444;
+    }
+
+    .form-section {
+      max-width: 800px;
+      margin: 50px auto;
+      background: linear-gradient(135deg, #fceabb, #f8b500); /* dorado */
+      padding: 40px;
+      border-radius: 15px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.25);
+    }
+    .form-section h2 {
+      text-align: center;
+      color: #fff;
+      margin-bottom: 25px;
+      font-size: 26px;
+    }
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+    }
+    input, textarea {
+      padding: 12px;
+      border: none;
+      border-radius: 8px;
+      font-size: 15px;
+      outline: none;
+    }
+    textarea {
+      resize: none;
+    }
+    button {
+      padding: 12px;
+      background: #007bff;
+      color: #fff;
+      border: none;
+      border-radius: 8px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+    button:hover {
+      background: #32cd32;
+      transform: scale(1.05);
+    }
+
+    .social {
+      text-align: center;
+      margin-top: 40px;
+    }
+    .social a {
+      display: inline-block;
+      margin: 0 12px;
+      padding: 12px 16px;
+      background: #ff7f50;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 10px;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+    .social a:hover {
+      background: #007bff;
+      transform: scale(1.1);
+    }
+
+    footer {
+      text-align: center;
+      padding: 25px;
+      background: rgba(0,0,0,0.8);
+      color: #fff;
+      margin-top: 50px;
+      font-size: 14px;
+      letter-spacing: 1px;
+    }
   </style>
 </head>
 <body>
-  <div class="container">
+  <header>
     <h1>Contacto</h1>
-    <div class="contact-info">
-      📧 <strong>azurzafidel2002@gmail.com</strong><br>
-      📱 <strong>969 012 473</strong><br>
-      📍 Puquio, Ayacucho - Perú
-    </div>
+    <nav>
+      <a href="index.html">Inicio</a>
+      <a href="about.html">Sobre mí</a>
+      <a href="contact.html">Contacto</a>
+    </nav>
+  </header>
 
-    <div class="social-links">
-      <p>Encuéntrame también en:</p>
-      <a href="https://www.facebook.com" target="_blank">Facebook</a>
-      <a href="https://github.com" target="_blank">GitHub</a>
-      <a href="https://www.instagram.com" target="_blank">Instagram</a>
+  <!-- Tarjetas de información -->
+  <div class="container">
+    <div class="card">
+      <h3>👤 Nombre</h3>
+      <p>Fidel Jesús Azurza López</p>
+    </div>
+    <div class="card">
+      <h3>📧 Correo</h3>
+      <p>azurzafidel2002@gmail.com</p>
+    </div>
+    <div class="card">
+      <h3>📱 Celular</h3>
+      <p>969012473</p>
+    </div>
+    <div class="card">
+      <h3>🏫 Institución</h3>
+      <p>IESTP José María Arguedas</p>
+    </div>
+    <div class="card">
+      <h3>💻 Carrera</h3>
+      <p>APSTI</p>
     </div>
   </div>
+
+  <!-- Formulario de contacto -->
+  <div class="form-section">
+    <h2>Envíame un mensaje</h2>
+    <form>
+      <input type="text" placeholder="Tu nombre" required>
+      <input type="email" placeholder="Tu correo" required>
+      <textarea rows="5" placeholder="Escribe tu mensaje aquí..." required></textarea>
+      <button type="submit">Enviar</button>
+    </form>
+  </div>
+
+  <!-- Redes sociales -->
+  <div class="social">
+    <a href="mailto:azurzafidel2002@gmail.com">Correo</a>
+    <a href="https://wa.me/51969012473" target="_blank">WhatsApp</a>
+    <a href="https://github.com/" target="_blank">GitHub</a>
+    <a href="https://linkedin.com/" target="_blank">LinkedIn</a>
+  </div>
+
+  <footer>
+    © 2025 Fidel Azurza | Todos los derechos reservados
+  </footer>
 </body>
 </html>
